2013-10-14 - version 0.1:
   - Initial release on GitHub (a few functions still missing)
2013-11-15 - version 0.2:
    - Initial release on CRAN
2013-11-26 - version 0.2.1:
    - Added 'link' argument to updateStatus 
    - Fixed typos in documentation
    - Now getFriends returns also locale of friends
2013-12-08 - version 0.2.2:
    - Added 'getCheckins' function