@@ -18,10 +18,10 @@
   will give access to some of the authenticated user's
   private information (birthday, hometown, location,
   relationships) and that of his/her friends, and
-  permissions to post status updates. If \code{FALSE},
-  token will give access only to public information. Note
-  that \code{updateStatus} will only work for tokens with
-  extended permissions.}
+  permissions to post status updates as well as to access
+  checkins. If \code{FALSE}, token will give access only to
+  public information. Note that \code{updateStatus} will
+  only work for tokens with extended permissions.}
 }
 \description{
   \code{fbOAuth} creates a long-lived OAuth access token
